# novaOS

./: .env.example  .gitignore  Cargo.toml  README.md  config.txt  kernel.img  link.ld
.github/workflows/: rust.yml
NovaError/: Cargo.toml
heap/: Cargo.toml
heap/src/: lib.rs  tests.rs
nova_error/: Cargo.toml
src/: application_manager.rs  config.S  configuration.rs  console.rs  framebuffer.rs  gpio.rs  heap.rs  interrupt.rs  interrupt_handlers.rs  irq_interrupt.rs  lib.rs  logger.rs  mailbox.rs  main.rs  math.rs  terminal.rs  timer.rs  uart.rs  uart_term.rs  vector.S
src/aarch64/: mmu.rs  mod.rs  registers.rs
src/aarch64/mmu/: physical_mapping.rs
src/configuration/: memory_mapping.rs
src/framebuffer/: bitmaps.rs
src/interrupt_handlers/: irq.rs  synchronous.rs
src/peripherals/: gpio.rs  mod.rs  uart.rs
src/pi3/: mailbox.rs  mod.rs  power_management.rs
tests/: logger.rs
tools/: build_debug.sh  build_release.sh  deply_to_hw.sh  generate_kernel.sh  generate_sd_card.sh  start_simulator.sh  start_simulator_debug.sh
workspace/heap/src/: lib.rs  tests.rs
workspace/nova_error/src/: lib.rs
