[package]
name = "nova"
version = "0.1.0"
edition = "2021"


[profile.dev]
panic = "abort"
debug = true
opt-level = 0

[profile.release]
panic = "abort"

[dependencies]
libm = "0.2.15"
heap = {path = "workspace/heap"}
nova_error = {path = "workspace/nova_error"}
paste = "1.0.15"
log = "0.4.29"

[workspace]

members = [
    "workspace/nova_error",
    "workspace/heap",
]
